--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,9 +1,6 @@
 @import "./_reset.scss";
 @import "./_common.scss";
-
 @import "./sections/_001_section.scss";
 
-
-
-
 @import "./sections/media/_001_section_media.scss";
+@import "./_style.scss";
