--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -83,7 +83,7 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
+  //font: inherit;
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -116,9 +116,11 @@ blockquote:after,
 q:before,
 q:after {
   content: "";
-  content: none;
 }
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+button {
+  border: none;
 }
