--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -3,7 +3,7 @@ $grey: #c4c4c4;
 
 $layout_320_minWidth: 320px;
 $layout_320_maxWidth: 480px;
-//$layout_768_minWidth: 481px;
+$layout_768_minWidth: 481px;
 $layout_768_maxWidth: 992px;
 $layout_1200_minWidth: 1200px;
 $layout_1200_maxWidth: 1200px;
