--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -2,36 +2,14 @@ button {
   border: none;
 }
 
-$grey: #c4c4c4;
-//  прописываем остальные нужные переменные и миксины
+.text-sections-styling {
+  padding-left: 10px;
+  padding-right: 10px;
+  text-align: center;
+}
 
-$layout_320_minWidth: 320px;
-$layout_320_maxWidth: 480px;
-//$layout_768_minWidth: 481px;
-$layout_768_maxWidth: 992px;
-$layout_1200_minWidth: 1200px;
-$layout_1200_maxWidth: 1200px;
-
-
-.container {  // общий wrapper
+.wrapper { // общий wrapper
   width: 100%;
   margin: 0 auto;
 
-  @media (max-width: $layout_320_minWidth) {
-    width: 320px;
-  }
-
-  @media (max-width: $layout_768_maxWidth) and (min-width: $layout_320_maxWidth+1) {
-    //max-width: $layout_768_maxWidth;
-    //min-width: $layout_320_maxWidth+1;
-  }
-
-  @media (max-width: $layout_1200_minWidth) and (min-width: $layout_768_maxWidth+1) {
-    //max-width: $layout_1200_minWidth;
-    //min-width: $layout_768_maxWidth+1;
-  }
-
-  @media (min-width: $layout_1200_maxWidth) {
-    width: $layout_1200_maxWidth;
-  }
 }
