--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,4 +7,6 @@
 @import "./_header_bars.scss";
 @import "./_fork_app.scss";
 @import "./_about_fork.scss";
+@import "./_user-reviews.scss";
+
 @import "./_prioritized_styles"; // стили используемые для переключения, должны обладать наибольшим весом
