--- a/src/scss/_prioritized_styles.scss
+++ b/src/scss/_prioritized_styles.scss
@@ -4,14 +4,51 @@
 }
 
 @media (max-width: $layout_320_minWidth) {
-  .wrapper, .front-header, .user-reviews  {
+  .wrapper, .front-header, .user-reviews, .user-reviews .user-reviews__container  {
     width: $layout_320_minWidth;
   }
 }
-@media (max-width: $layout_768_maxWidth) and (min-width: $layout_320_maxWidth+1) {}
-@media (max-width: $layout_1200_minWidth) and (min-width: $layout_768_maxWidth+1) {}
+@media (max-width: $layout_768_maxWidth) and (min-width: $layout_320_maxWidth+1) {
+  .user-reviews .user-reviews__container {
+    grid-template-columns: 1fr 1fr;
+  }
+  .main-header__nav-mobile {
+    display: none;
+  }
+  .main-header__nav-tablet {
+    display: block;
+  }
+
+}
+@media (max-width: $layout_1200_minWidth) and (min-width: $layout_768_maxWidth+1) {
+  .user-reviews .user-reviews__container {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .main-header__nav-mobile {
+    display: none;
+  }
+  .main-header__nav-tablet {
+    display: none;
+  }
+  .main-header__nav-LG {
+    display: flex;
+  }
+}
 @media (min-width: $layout_1200_maxWidth) {
   .wrapper, .front-header  {
     width: $layout_1200_maxWidth;
+  }
+
+  .user-reviews .user-reviews__container {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .main-header__nav-mobile {
+    display: none;
+  }
+  .main-header__nav-tablet {
+    display: none;
+  }
+  .main-header__nav-LG {
+    display: flex;
   }
 }
