--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -3,6 +3,10 @@ button {
 }
 a {
   text-decoration: none;
+  &:hover {
+    color: white;
+    cursor: pointer;
+  }
 }
 
 .text-sections-styling {
