dev working, build partially working, initial styles done

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,8 +2,9 @@
 @import "./_common";
 
 @import "./sections/_001_section";
-@import "./sections/revolutionary_editor";
-@import "./sections/what_you_get";
+@import "./sections/_revolutionary_editor";
+@import "./sections/_what_you_get";
+@import "./sections/_pricing";
 
 
 
