--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -30,3 +30,25 @@
 
 //   }
 // }
+
+// Variables
+$text-font-family: 'Lato', sans-serif;
+$heading-font-family: 'Montserrat', sans-serif;
+$text-line-height: 20px;
+$pricing-color: white;
+
+
+$rev-ed-heading-font-size: 26px;
+$pricing-heading-font-size: 28px;
+
+$text-padding: 0 20px;
+
+// Mixins
+@mixin heading-font {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+}
+
+@media(min-width: 348px) {
+  $rev-ed-heading-font-size: 26px;
+}
