--- a/src/scss/sections/_what_you_get.scss
+++ b/src/scss/sections/_what_you_get.scss
@@ -4,6 +4,11 @@
   color: #8D81AC;
   line-height: 37px;
   margin: 20px auto;
+
+  @media(min-width: 768px) {
+    font-size: 42px;
+    line-height: 44px;
+  }
 }
 
 .what-you-get__heading::before {
@@ -14,14 +19,15 @@
   content: '>'
 }
 
-.goright {
-  position: relative;
-  left: 12px;
-}
-
-.what-you-get__icon {
+.what-you-get__card__icon {
   margin-top: 30px;
   margin-bottom: 15px;
+  width: 120px;
+
+  @media(min-width: 768px) {
+    margin-left: 10px;
+    margin-left: 10px;
+  }
 }
 
 .what-you-get__subheading {
@@ -29,6 +35,7 @@
   font-size: 16px;
   color: #323232;
   margin: 10px 0;
+  padding: $text-padding;
 }
 
 .what-you-get__text {
@@ -42,8 +49,35 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  &__icon {
+    margin-top: 30px;
+    margin-bottom: 15px;
+    width: 135px;
+  
+    @media(min-width: 768px) {
+      margin-left: 10px;
+      margin-left: 10px;
+      width: 136px;
+    }
+  }
+
+  @media(min-width: 768px) {
+    flex-direction: row;
+  }
 }
 
 .what-you-get__card:last-of-type {
   margin-bottom: 35px;
+}
+
+@media (min-width: 768px) {
+  .card__flex-item {
+    text-align: left;
+  }
+} 
+
+.goright {
+  display: flex;
+  justify-content: flex-end;
 }
