Завершён функционал адаптивности моей части проекта. Приведены в порядок шрифты. Создан дополнительный скрипт переключения классами по медиа-запросам. Готов к слиянию в общий проект

--- a/src/scss/_about_fork.scss
+++ b/src/scss/_about_fork.scss
@@ -1,5 +1,5 @@
 h1 {
-  font-family: 'Montserrat Subrayada', sans-serif;
+  font-family: 'Montserrat SemiBold', sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 48px;
