--- a/src/scss/_header_bars.scss
+++ b/src/scss/_header_bars.scss
@@ -76,7 +76,7 @@
 }
 
 .btn {
-  font-family: 'Montserrat Subrayada', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   text-align: center;
   color: white;
   font-size: 15px;
