--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,9 +1,7 @@
 $grey: #c4c4c4;
 //  прописываем остальные нужные переменные и миксины
 
-$layout_320_minWidth: 320px;
-$layout_320_maxWidth: 480px;
-//$layout_768_minWidth: 481px;
-$layout_768_maxWidth: 992px;
-$layout_1200_minWidth: 1200px;
-$layout_1200_maxWidth: 1200px;
+$breakpoint_320: 320px;
+$breakpoint_480: 480px;
+$breakpoint_992: 992px;
+$breakpoint_1200: 1200px;
