--- a/src/scss/sections/_what_you_get.scss
+++ b/src/scss/sections/_what_you_get.scss
@@ -1,3 +1,12 @@
+.what-you-get {
+  padding-top: 60px;
+
+  @media (min-width: 1200px) {
+    display: flex;
+    background: #F4F4F4;
+  }
+}
+
 .what-you-get__heading {
   @include heading-font;
   font-size: 32px;
@@ -9,6 +18,10 @@
     font-size: 42px;
     line-height: 44px;
   }
+
+  @media (min-width: 1200px) {
+    display: none;
+  }
 }
 
 .what-you-get__heading::before {
@@ -17,17 +30,6 @@
 
 .what-you-get__heading::after {
   content: '>'
-}
-
-.what-you-get__card__icon {
-  margin-top: 30px;
-  margin-bottom: 15px;
-  width: 120px;
-
-  @media(min-width: 768px) {
-    margin-left: 10px;
-    margin-left: 10px;
-  }
 }
 
 .what-you-get__subheading {
@@ -50,15 +52,18 @@
   flex-direction: column;
   align-items: center;
 
+  @media (min-width: 1200px) {
+    margin-bottom: 20px;
+  }
+
   &__icon {
     margin-top: 30px;
     margin-bottom: 15px;
-    width: 135px;
+    min-width: 135px;
   
     @media(min-width: 768px) {
       margin-left: 10px;
-      margin-left: 10px;
-      width: 136px;
+      margin-right: 10px;
     }
   }
 
@@ -80,4 +85,15 @@
 .goright {
   display: flex;
   justify-content: flex-end;
+}
+
+.flex-2-1200 {
+  display: none;
+
+  @media (min-width: 1200px) {
+    display: inline-block;
+    margin-top: 0;
+    position: relative;
+    right: 75px;
+  }
 }
