--- a/src/scss/sections/_pricing.scss
+++ b/src/scss/sections/_pricing.scss
@@ -1,12 +1,6 @@
 .pricing {
   background: #634566;
-
   padding-top: 10px;
-
-  @media (min-width: 768px) {
-    padding: 55px 0;
-  }
-
 }
 
 .pricing__card-container {
@@ -16,17 +10,6 @@
   align-items: center;
   padding: $text-padding;
   margin: o auto;
-
-  @media(min-width: 768px) {
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    margin: 0 auto;
-  }
-
-  @media(min-width: 768px) and (max-width: 1199px) {
-    width: 560px;
-  }
 }
 
 .pricing__heading {
@@ -35,15 +18,6 @@
   color: $pricing-color;
   font-size: $pricing-heading-font-size;
   margin-bottom: 15px;
-
-  @media(min-width: 768px) {
-    font-size: 42px;
-    line-height: 44px;
-  }
-
-  @media(min-width: 1200px) {
-    margin-bottom: 30px;
-  }
 }
 
 .pricing__card {
@@ -93,13 +67,6 @@
   }
 }
 
-.pricing__card:last-of-type {
-  @media (min-width: 768px) and (max-width: 1199px) {
-    position: relative;
-    right: 8px;
-  }
-}
-
 .card-bigger {
   background: rgba(70, 48, 72, 0.84);
   height: 535px;
@@ -120,11 +87,10 @@
     @extend .pricing__card__button;
     margin-top: 80px;
   }
+}
 
-  @media(min-width: 768px) and (max-width: 1199px) {
-    position: relative;
-    right: 25px;
-  }
+.golower {
+  margin-top: 61px;
 }
 
 .line-after::after {
