--- a/src/scss/sections/_what_you_get.scss
+++ b/src/scss/sections/_what_you_get.scss
@@ -1,10 +1,5 @@
 .what-you-get {
   padding-top: 60px;
-
-  @media (min-width: 1200px) {
-    display: flex;
-    background: #F4F4F4;
-  }
 }
 
 .what-you-get__heading {
@@ -13,15 +8,6 @@
   color: #8D81AC;
   line-height: 37px;
   margin: 20px auto;
-
-  @media(min-width: 768px) {
-    font-size: 42px;
-    line-height: 44px;
-  }
-
-  @media (min-width: 1200px) {
-    display: none;
-  }
 }
 
 .what-you-get__heading::before {
@@ -52,23 +38,10 @@
   flex-direction: column;
   align-items: center;
 
-  @media (min-width: 1200px) {
-    margin-bottom: 20px;
-  }
-
   &__icon {
     margin-top: 30px;
     margin-bottom: 15px;
     min-width: 135px;
-  
-    @media(min-width: 768px) {
-      margin-left: 10px;
-      margin-right: 10px;
-    }
-  }
-
-  @media(min-width: 768px) {
-    flex-direction: row;
   }
 }
 
@@ -76,24 +49,11 @@
   margin-bottom: 35px;
 }
 
-@media (min-width: 768px) {
-  .card__flex-item {
-    text-align: left;
-  }
-} 
-
 .goright {
   display: flex;
   justify-content: flex-end;
 }
 
-.flex-2-1200 {
+.after1200px {
   display: none;
-
-  @media (min-width: 1200px) {
-    display: inline-block;
-    margin-top: 0;
-    position: relative;
-    right: 75px;
-  }
 }
