--- a/src/scss/sections/_revolutionary_editor.scss
+++ b/src/scss/sections/_revolutionary_editor.scss
@@ -3,15 +3,16 @@
   padding: 0 10px;
   text-align: center;
   overflow-x: hidden;
+  margin: 0 auto;
 }
 
 * {
-  // box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .revolutionary-editor__heading {
   @include heading-font;
-  font-size: $rev-ed-heading-font-size;
+  font-size: 26px;
   line-height: 28px;
   color: #635C73;
   margin: 20px auto;
