--- a/src/scss/sections/media/_pricing_media.scss
+++ b/src/scss/sections/media/_pricing_media.scss
@@ -1,4 +1,5 @@
-// На 481 px ну никак не вмещаются 2 колонки.
+// На 481 px ну никак не вмещаются 2 колонки. Аналогично с четырьмя колонками на 1200 рх.
+
 // Красиво отображается контент на всех разрешениях если делать брейкпоинты именно на 768 и 1200 px.
 // Я пытался по другому и так и сяк - не получается никак))
 
@@ -28,11 +29,11 @@
   }
 }
 
-@media (min-width: 1200px) {
-  .container {
-    width: 1200px;
-  }
-}
+// @media (min-width: 1200px) {
+//   .wrapper {
+//     width: 1200px;
+//   }
+// }
 
 // Interim
 @media (min-width: 768px) and (max-width: 1180px) {
