--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -1,49 +1,48 @@
-// $grey: #c4c4c4;
-// //  прописываем остальные нужные переменные и миксины
-
-// $layout_320_minWidth: 320px;
-// $layout_320_maxWidth: 480px;
-// $layout_768_minWidth: 481px;
-// $layout_768_maxWidth: 992px;
-// $layout_1200_minWidth: 1200px;
-// $layout_1200_maxWidth: 1200px;
-
-
-// .container {  // общий wrapper
-//   max-width: 1200px;
-//   width: 100%;
-//   margin: 0 auto;
-
-//   @media (max-width: $layout_320_maxWidth) {
-
-//   }
-
-//   @media (max-width: $layout_768_maxWidth) and (min-width: $layout_320_maxWidth+1) {
-
-//   }
-
-//   @media (max-width: $layout_1200_minWidth) and (min-width: $layout_768_maxWidth+1) {
-
-//   }
-
-//   @media (max-width: $layout_1200_maxWidth) {
-
-//   }
-// }
-
 // Variables
 $text-font-family: 'Lato', sans-serif;
 $heading-font-family: 'Montserrat', sans-serif;
 $text-line-height: 20px;
 $pricing-color: white;
 
-
-
-
 $text-padding: 0 20px;
 
 // Mixins
 @mixin heading-font {
   font-family: 'Montserrat', sans-serif;
-  font-weight: 700;
+  font-weight: bold;
+}
+
+// Styles
+button {
+  border: none;
+}
+a {
+  text-decoration: none;
+  &:hover {
+    color: white;
+    cursor: pointer;
+  }
+}
+
+.text-sections-styling {
+  padding-left: 10px;
+  padding-right: 10px;
+  text-align: center;
+}
+
+.wrapper {
+  box-sizing: border-box;
+  width: 100%;
+  padding: 0 10px;
+  text-align: center;
+  overflow-x: hidden;
+  margin: 0 auto;
+
+  @media (min-width: 1200px) {
+    width: 1200px;
+  }
+}
+
+section {
+  text-align: center;
 }
