Project merged. Pre-release version. Фиксим пару багов и деплоим

--- a/src/scss/_fork_app.scss
+++ b/src/scss/_fork_app.scss
@@ -11,18 +11,19 @@
   margin: 0 auto;
 }
 .front-header--mobile-mode {
-  //TODO -просто тест: определиться каким способом лучше
-  //background: no-repeat center url("../../src/img/2.png"); //можно в одну строку
-  background-image: url("../../src/img/2.png"); // а можно и так расписать
+  background-image: url("./img/2.png"); // а можно и так расписать
+  //background-image: url("../../src/img/2.png"); // а можно и так расписать
   background-size: 100% 100%;
 }
 .front-header--tablet-mode {
-    background-image: url('../../src/img/keyboard-small.png');
+    background-image: url('./img/keyboard-small.png');
+    //background-image: url('../../src/img/keyboard-small.png');
 // ну ЗАХОТЕЛОСЬ мне сделать так, буд-то бы ЕЩЁ одна картинка на этом режиме есть!  ;-)
 // FIXME -еще один просто текст
 }
 .front-header--tablet-LG-mode {
-    background-image: url('../../src/img/keyboard.png');
+    background-image: url('./img/keyboard.png');
+    //background-image: url('../../src/img/keyboard.png');
 
 }
 .front-header__heading {
