--- a/src/scss/_header_bars.scss
+++ b/src/scss/_header_bars.scss
@@ -51,7 +51,7 @@
      height: 41px;
   //про подмену изображения в CSS:  https://overcoder.net/q/359230/%D0%B7%D0%B0%D0%BC%D0%B5%D0%BD%D0%B8%D1%82%D1%8C-%D1%81%D0%BE%D0%B4%D0%B5%D1%80%D0%B6%D0%B8%D0%BC%D0%BE%D0%B5-img-%D1%87%D0%B5%D1%80%D0%B5%D0%B7-css
      &:hover {     // замена через CSS изображения: старое сворачиваем по width:0, height: 0, а новое добавляем через background-image и размер даем через padding
-       background: no-repeat url("../../src/img/main-nav__logo_white1.png");
+       background: no-repeat url("./img/main-nav__logo_white1.png");
        background-size: 100%;
        padding: 21px;
        width: 0;
