--- a/src/scss/_user-reviews.scss
+++ b/src/scss/_user-reviews.scss
@@ -1,5 +1,6 @@
 .user-reviews {
-  background: no-repeat center url("../../src/img/testmonials-bg 2.png");
+  background: no-repeat center url("./img/testmonials-bg 2.png");
+  //background: no-repeat center url("../../src/img/testmonials-bg 2.png");
   background-size: 100% 100%;
   margin: 0 auto;
 
