--- a/src/scss/sections/_what_you_get.scss
+++ b/src/scss/sections/_what_you_get.scss
@@ -26,7 +26,7 @@
 
   @media(min-width: 768px) {
     margin-left: 10px;
-    margin-left: 10px;
+    margin-right: 10px;
   }
 }
 
@@ -57,7 +57,7 @@
   
     @media(min-width: 768px) {
       margin-left: 10px;
-      margin-left: 10px;
+      margin-right: 10px;
       width: 136px;
     }
   }
