my final version for review and production

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -1,5 +1,3 @@
-
-/* --------Часть Влада --------------*/
 $layout_320_minWidth: 320px;
 $layout_320_maxWidth: 480px;
 $layout_768_maxWidth: 992px;
@@ -17,39 +15,37 @@ a {
   }
 }
 
-
 .text-sections-styling {
   padding-left: 10px;
   padding-right: 10px;
   text-align: center;
 }
-.wrapper, .container{ /*TODO спросить Игоря, может ему не нужен уже .container здесь.   общий wrapper*/
+.wrapper{
   width: 100%;
   margin: 0 auto;
+  overflow-x: hidden;
 }
 
-/*--- Далее, и до конца- код Игоря: ----------  */
-  .container{max-width: 1200px;} /*TODO тоже спросить Игоря */
-
-// Variables
 $text-font-family: 'Lato', sans-serif;
 $heading-font-family: 'Montserrat', sans-serif;
 $text-line-height: 20px;
 $pricing-color: white;
 
-
-$rev-ed-heading-font-size: 26px;
-$pricing-heading-font-size: 28px;
-
 $text-padding: 0 20px;
 
-// Mixins
 @mixin heading-font {
   font-family: 'Montserrat', sans-serif;
-  font-weight: 700;
+  font-weight: bold;
 }
 
-@media(min-width: 348px) {
-  $rev-ed-heading-font-size: 26px;
+section, header {
+  text-align: center;
+  padding: 0 10px;
 }
-/*---- конец кода Игоря-------*/
+
+.mutual-background {
+  background: no-repeat center url("./img/testmonials-bg 2.png");
+//background: no-repeat center url("../../src/img/testmonials-bg 2.png");
+background-size: 100% 100%;
+margin: 0 auto;
+}
