--- a/src/scss/sections/_user-reviews.scss
+++ b/src/scss/sections/_user-reviews.scss
@@ -1,8 +1,8 @@
 .user-reviews {
-  background: no-repeat center url("./img/testmonials-bg 2.png");
-  //background: no-repeat center url("../../src/img/testmonials-bg 2.png");
-  background-size: 100% 100%;
-  margin: 0 auto;
+  // background: no-repeat center url("./img/testmonials-bg 2.png");
+  // //background: no-repeat center url("../../src/img/testmonials-bg 2.png");
+  // background-size: 100% 100%;
+  // margin: 0 auto;
 
   .user-reviews__container {
     display: grid;
@@ -37,23 +37,24 @@
 
 
   .user-reviews__conclusion {
-    position: relative;
     font-family: 'Lato-Regular', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 21px;
-    text-align: justify;
+    text-align: center;
     color: #A291A5;
     padding: 3px 45px 38px;
     //margin: 3px 45px 38px;
     //border-bottom: 3px solid #645766;  //так можно сделать без псевдо-класса
     &::after {
       content: '';
-      position: absolute;
-      left: 45px;
-      bottom: 4px;
+      position: relative;
+      top: 15px;
+      display: block;
+      margin: 0 auto;
       width: 80%;
+      line-height: 40px;
       border-bottom: 2px solid #645766; //а так привязка к ширине
     }
   }
