--- a/src/scss/sections/_what_you_get.scss
+++ b/src/scss/sections/_what_you_get.scss
@@ -1,14 +1,13 @@
+.what-you-get {
+  padding-top: 60px;
+}
+
 .what-you-get__heading {
   @include heading-font;
   font-size: 32px;
   color: #8D81AC;
   line-height: 37px;
   margin: 20px auto;
-
-  @media(min-width: 768px) {
-    font-size: 42px;
-    line-height: 44px;
-  }
 }
 
 .what-you-get__heading::before {
@@ -17,17 +16,6 @@
 
 .what-you-get__heading::after {
   content: '>'
-}
-
-.what-you-get__card__icon {
-  margin-top: 30px;
-  margin-bottom: 15px;
-  width: 120px;
-
-  @media(min-width: 768px) {
-    margin-left: 10px;
-    margin-right: 10px;
-  }
 }
 
 .what-you-get__subheading {
@@ -53,17 +41,7 @@
   &__icon {
     margin-top: 30px;
     margin-bottom: 15px;
-    width: 135px;
-  
-    @media(min-width: 768px) {
-      margin-left: 10px;
-      margin-right: 10px;
-      width: 136px;
-    }
-  }
-
-  @media(min-width: 768px) {
-    flex-direction: row;
+    min-width: 135px;
   }
 }
 
@@ -71,13 +49,11 @@
   margin-bottom: 35px;
 }
 
-@media (min-width: 768px) {
-  .card__flex-item {
-    text-align: left;
-  }
-} 
-
 .goright {
   display: flex;
   justify-content: flex-end;
+}
+
+.after993px {
+  display: none;
 }
